--- a/IL HW-ID Checker WPF NET Fr 4.8/MainWindow.xaml
+++ b/IL HW-ID Checker WPF NET Fr 4.8/MainWindow.xaml
@@ -10,6 +10,7 @@
     <Window.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="Margin" Value="6" />
+            <Setter Property="FontFamily" Value="Cascadia Code"/>
         </Style>
     </Window.Resources>
 
